--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 license = "Zlib OR Apache-2.0 OR MIT"
 
 [dependencies]
-beryllium = "0.9.0"
-bytemuck = "1.12.3"
-gles31 = "1.0.1"
-ultraviolet = "0.9.0"
+beryllium = "0.13.0"
+fermium = "22605.0.0"
+yacurses = "0.2.4"
